@tool
extends Control

# --- UIå‚ç…§ ---
# ã‚­ãƒ£ãƒ©ã‚¯ã‚¿ãƒ¼é¸æŠžç”¨
var char_select_button: OptionButton
var refresh_button: Button

# åŸºæœ¬æƒ…å ±
@onready var character_id_input: LineEdit = $HSplitContainer/LeftPanel/VBox/General/CharacterID
@onready var display_name_input: LineEdit = $HSplitContainer/LeftPanel/VBox/General/DisplayName
@onready var description_input: TextEdit = $HSplitContainer/LeftPanel/VBox/General/Description

# è¡¨ç¤ºè¨­å®š
@onready var scale_spin: SpinBox = $HSplitContainer/LeftPanel/VBox/Settings/Scale
@onready var mirror_check: CheckBox = $HSplitContainer/LeftPanel/VBox/Settings/Mirror

# ãƒ—ãƒ¬ãƒ“ãƒ¥ãƒ¼è¨­å®š (æ–°è¦)
@onready var bg_select: OptionButton = $HSplitContainer/LeftPanel/VBox/PreviewSettings/BgSelect

# ãƒãƒ¼ãƒˆãƒ¬ãƒ¼ãƒˆãƒªã‚¹ãƒˆ
@onready var portraits_list: ItemList = $HSplitContainer/LeftPanel/VBox/Portraits/List
@onready var add_portrait_button: Button = $HSplitContainer/LeftPanel/VBox/Portraits/HBox_Buttons/AddPortraitButton
@onready var save_button: Button = $HSplitContainer/LeftPanel/VBox/Portraits/HBox_Buttons/SaveButton

# è¡¨æƒ…ç·¨é›†
@onready var portrait_name_input: LineEdit = $HSplitContainer/LeftPanel/VBox/PortraitEdit/PortraitName
@onready var base_image_button: Button = $HSplitContainer/LeftPanel/VBox/PortraitEdit/BaseImage
@onready var layers_container: VBoxContainer = $HSplitContainer/LeftPanel/VBox/PortraitEdit/Layers

# ãƒ—ãƒ¬ãƒ“ãƒ¥ãƒ¼
@onready var preview_viewport: SubViewport = $HSplitContainer/RightPanel/Preview/SubViewport
@onready var preview_display: Node2D = $HSplitContainer/RightPanel/Preview/SubViewport/CharacterDisplay
@onready var background_preview: Sprite2D = $HSplitContainer/RightPanel/Preview/SubViewport/BackgroundPreview
@onready var guide_frame: ReferenceRect = $HSplitContainer/RightPanel/Preview/SubViewport/GuideFrame
@onready var preview_camera: Camera2D = $HSplitContainer/RightPanel/Preview/SubViewport/Camera2D

# --- å¤‰æ•° ---
var current_character: CharacterData
var current_portrait_name: String = ""
var file_dialog: FileDialog
var _is_updating_ui: bool = false

const DATA_DIR = "res://resources/characters_data/"
const BG_DIR = "res://resources/backgrounds/"

func _ready():
	_setup_ui()
	_connect_signals()
	
	# åˆæœŸåŒ–
	current_character = CharacterData.new()
	current_character.character_id = "preview_char"
	
	_refresh_character_list()
	_refresh_background_list() # èƒŒæ™¯ãƒªã‚¹ãƒˆæ›´æ–°
	
	portraits_list.select_mode = ItemList.SELECT_SINGLE
	print("Character Editor Ready")

func _setup_ui():
	# ãƒªã‚¹ãƒˆé ˜åŸŸç¢ºä¿
	if portraits_list:
		portraits_list.custom_minimum_size.y = 200
		portraits_list.size_flags_vertical = Control.SIZE_EXPAND_FILL
	
	# ãƒ•ã‚¡ã‚¤ãƒ«ãƒ€ã‚¤ã‚¢ãƒ­ã‚°
	if not file_dialog:
		file_dialog = FileDialog.new()
		file_dialog.access = FileDialog.ACCESS_RESOURCES
		file_dialog.size = Vector2(800, 600)
		add_child(file_dialog)
	
	# ã‚­ãƒ£ãƒ©ã‚¯ã‚¿ãƒ¼é¸æŠžUIæ§‹ç¯‰
	var general_container = $HSplitContainer/LeftPanel/VBox/General
	if general_container.has_node("CharSelectHBox"):
		char_select_button = general_container.get_node("CharSelectHBox/CharSelect")
		refresh_button = general_container.get_node("CharSelectHBox/Refresh")
	else:
		var hbox = HBoxContainer.new()
		hbox.name = "CharSelectHBox"
		var label = Label.new(); label.text = "ç·¨é›†å¯¾è±¡:"
		hbox.add_child(label)
		char_select_button = OptionButton.new()
		char_select_button.name = "CharSelect"
		char_select_button.size_flags_horizontal = Control.SIZE_EXPAND_FILL
		hbox.add_child(char_select_button)
		refresh_button = Button.new(); refresh_button.name = "Refresh"; refresh_button.text = "æ›´æ–°"
		hbox.add_child(refresh_button)
		general_container.add_child(hbox)
		general_container.move_child(hbox, 0)
	
	# ã‚·ã‚°ãƒŠãƒ«é‡è¤‡é˜²æ­¢
	if char_select_button.item_selected.is_connected(_on_character_selected_from_list):
		char_select_button.item_selected.disconnect(_on_character_selected_from_list)
	char_select_button.item_selected.connect(_on_character_selected_from_list)
	
	if refresh_button.pressed.is_connected(_refresh_character_list):
		refresh_button.pressed.disconnect(_refresh_character_list)
	refresh_button.pressed.connect(_refresh_character_list)

func _connect_signals():
	_safe_connect(character_id_input.text_changed, _on_character_id_changed)
	_safe_connect(display_name_input.text_changed, _on_display_name_changed)
	_safe_connect(scale_spin.value_changed, _on_scale_changed)
	_safe_connect(mirror_check.toggled, _on_mirror_toggled)
	
	# èƒŒæ™¯é¸æŠž
	_safe_connect(bg_select.item_selected, _on_background_selected)
	
	_safe_connect(portraits_list.item_selected, _on_portrait_selected)
	_safe_connect(portraits_list.item_clicked, _on_portrait_clicked)
	
	_safe_connect(add_portrait_button.pressed, add_new_portrait)
	_safe_connect(save_button.pressed, save_character)
	
	_safe_connect(portrait_name_input.text_changed, _on_portrait_name_changed)
	_safe_connect(base_image_button.pressed, _on_select_base_image)

func _safe_connect(signal_obj: Signal, method: Callable):
	if signal_obj.is_connected(method):
		signal_obj.disconnect(method)
	signal_obj.connect(method)

# --- èƒŒæ™¯æ©Ÿèƒ½ (æ–°è¦è¿½åŠ ) ---

func _refresh_background_list():
	bg_select.clear()
	bg_select.add_item("èƒŒæ™¯ãªã— (Gray)", 0)
	bg_select.set_item_metadata(0, "")
	
	var dir = DirAccess.open(BG_DIR)
	if dir:
		dir.list_dir_begin()
		var file_name = dir.get_next()
		var idx = 1
		while file_name != "":
			if not dir.current_is_dir() and (file_name.ends_with(".png") or file_name.ends_with(".jpg")):
				bg_select.add_item(file_name, idx)
				bg_select.set_item_metadata(idx, BG_DIR + file_name)
				idx += 1
			file_name = dir.get_next()
	else:
		DirAccess.make_dir_recursive_absolute(BG_DIR)

func _on_background_selected(index: int):
	var bg_path = bg_select.get_item_metadata(index)
	guide_frame.visible = false
	
	if bg_path == "":
		background_preview.texture = null
	else:
		if ResourceLoader.exists(bg_path):
			var tex = load(bg_path)
			background_preview.texture = tex
			print("èƒŒæ™¯ãƒ—ãƒ¬ãƒ“ãƒ¥ãƒ¼: ", bg_path, " ã‚µã‚¤ã‚º: ", tex.get_size())
			
			# ç”»åƒãŒ4K (3840x2160) ä»¥ä¸Šã®å ´åˆã€4Kã®èµ¤æž ã‚’è¡¨ç¤º
			if tex.get_width() >= 3840 or tex.get_height() >= 2160:
				guide_frame.visible = true
				print("-> 4Kã‚µã‚¤ã‚ºã‚¬ã‚¤ãƒ‰ã‚’è¡¨ç¤ºã—ã¾ã™")
		else:
			push_warning("èƒŒæ™¯ç”»åƒãŒè¦‹ã¤ã‹ã‚Šã¾ã›ã‚“: " + bg_path)

# --- ã‚­ãƒ£ãƒ©ã‚¯ã‚¿ãƒ¼ãƒªã‚¹ãƒˆç®¡ç† ---

func _refresh_character_list():
	var old_idx = char_select_button.selected
	char_select_button.clear()
	char_select_button.add_item("âž• æ–°è¦ä½œæˆ (New)", 0)
	char_select_button.set_item_metadata(0, "")
	
	var dir = DirAccess.open(DATA_DIR)
	if dir:
		dir.list_dir_begin()
		var file_name = dir.get_next()
		var index = 1
		while file_name != "":
			if not dir.current_is_dir() and file_name.ends_with(".json"):
				var id = file_name.get_basename()
				char_select_button.add_item("ðŸ“„ " + id, index)
				char_select_button.set_item_metadata(index, id)
				index += 1
			file_name = dir.get_next()
	else:
		DirAccess.make_dir_recursive_absolute(DATA_DIR)
	
	if old_idx >= 0 and old_idx < char_select_button.item_count:
		char_select_button.selected = old_idx

func _on_character_selected_from_list(index: int):
	var selected_id = char_select_button.get_item_metadata(index)
	if selected_id == "": _reset_editor_for_new()
	else: load_character(selected_id)

func _reset_editor_for_new():
	current_character = CharacterData.new()
	current_character.character_id = "new_character"
	current_portrait_name = ""
	_refresh_ui()

# --- ã‚¤ãƒ™ãƒ³ãƒˆãƒãƒ³ãƒ‰ãƒ© ---

func _on_character_id_changed(new_text: String): 
	current_character.character_id = new_text
	_update_preview()

func _on_display_name_changed(new_text: String): current_character.display_name = new_text
func _on_scale_changed(value: float):
	current_character.portrait_scale = value; _update_preview()
func _on_mirror_toggled(toggled: bool):
	current_character.mirror = toggled; _update_preview()

func _on_portrait_clicked(index: int, _at_position: Vector2, _mouse_button_index: int):
	_on_portrait_selected(index)

func _on_portrait_selected(index: int):
	if index < 0: return
	var p_name = portraits_list.get_item_text(index)
	current_portrait_name = p_name
	_load_portrait_to_editor(current_portrait_name)

func _on_portrait_name_changed(new_text: String):
	if _is_updating_ui or current_portrait_name.is_empty(): return
	if current_character.portraits.has(current_portrait_name):
		var data = current_character.portraits[current_portrait_name]
		current_character.portraits.erase(current_portrait_name)
		data.name = new_text
		current_character.portraits[new_text] = data
		current_portrait_name = new_text
		_refresh_portraits_list()
		for i in portraits_list.item_count:
			if portraits_list.get_item_text(i) == new_text:
				portraits_list.select(i); break

func _on_select_base_image():
	_open_file_dialog("*.png, *.jpg ; Images", func(path):
		if current_portrait_name.is_empty(): return
		var p = current_character.portraits.get(current_portrait_name)
		if p: p.base_image = path; base_image_button.text = path.get_file(); _update_preview()
	)

# --- æ©Ÿèƒ½å®Ÿè£… ---

func add_new_portrait():
	var p_name = "portrait_%d" % (current_character.portraits.size() + 1)
	while current_character.portraits.has(p_name): p_name += "_"
	current_character.add_portrait(p_name)
	_refresh_portraits_list()
	for i in portraits_list.item_count:
		if portraits_list.get_item_text(i) == p_name:
			portraits_list.select(i); _on_portrait_selected(i); break

func _refresh_portraits_list():
	portraits_list.clear()
	var keys = current_character.portraits.keys()
	keys.sort()
	for p_name in keys:
		portraits_list.add_item(p_name)

func _load_portrait_to_editor(p_name: String):
	_is_updating_ui = true
	var p = current_character.portraits.get(p_name)
	if not p:
		_is_updating_ui = false; return
	
	portrait_name_input.text = p.name
	base_image_button.text = p.base_image.get_file() if not p.base_image.is_empty() else "Select Base Image..."
	_refresh_layers_ui(p)
	_update_preview()
	_is_updating_ui = false

func _refresh_layers_ui(portrait):
	for child in layers_container.get_children(): child.queue_free()
	var layer_names = ["eyebrows", "eyes", "mouth", "extra"]
	for layer_name in layer_names:
		var current_path = portrait.layers.get(layer_name, "")
		var current_offset = Vector2.ZERO
		if "layer_offsets" in portrait and portrait.layer_offsets.has(layer_name):
			current_offset = portrait.layer_offsets[layer_name]
		
		var hbox = HBoxContainer.new()
		layers_container.add_child(hbox)
		var label = Label.new(); label.text = layer_name.capitalize(); label.custom_minimum_size = Vector2(80, 0); hbox.add_child(label)
		
		var button = Button.new()
		button.text = current_path.get_file() if not current_path.is_empty() else "Select..."
		button.size_flags_horizontal = Control.SIZE_EXPAND_FILL
		button.pressed.connect(_on_select_layer.bind(layer_name))
		hbox.add_child(button)
		
		var x_spin = SpinBox.new(); x_spin.prefix = "x:"; x_spin.min_value = -1000; x_spin.max_value = 1000; x_spin.step = 1.0
		x_spin.value = current_offset.x; x_spin.custom_minimum_size = Vector2(70, 0)
		x_spin.value_changed.connect(func(val): _on_layer_offset_changed(layer_name, val, true))
		hbox.add_child(x_spin)
		
		var y_spin = SpinBox.new(); y_spin.prefix = "y:"; y_spin.min_value = -1000; y_spin.max_value = 1000; y_spin.step = 1.0
		y_spin.value = current_offset.y; y_spin.custom_minimum_size = Vector2(70, 0)
		y_spin.value_changed.connect(func(val): _on_layer_offset_changed(layer_name, val, false))
		hbox.add_child(y_spin)

func _on_select_layer(layer_name: String):
	_open_file_dialog("*.png, *.jpg ; Images", func(path):
		current_character.set_portrait_layer(current_portrait_name, layer_name, path)
		_load_portrait_to_editor(current_portrait_name)
	)

func _on_layer_offset_changed(layer_name: String, value: float, is_x: bool):
	if current_portrait_name.is_empty(): return
	var p = current_character.portraits.get(current_portrait_name)
	if not p: return
	if not "layer_offsets" in p: return
	if p.layer_offsets == null: p.layer_offsets = {}
	
	var offset = p.layer_offsets.get(layer_name, Vector2.ZERO)
	if is_x: offset.x = value
	else: offset.y = value
	p.layer_offsets[layer_name] = offset
	_update_preview()

func _update_preview():
	if current_portrait_name.is_empty(): return
	
	var display_id = current_character.character_id
	if display_id.is_empty():
		display_id = "preview_temp_id"
		current_character.character_id = display_id
	
	preview_display.clear_all()
	preview_display.set_character_data_direct(current_character)
	
	# ä¸­å¤®(960, 540) ã«è¡¨ç¤º
	preview_display.show_character(display_id, current_portrait_name, 960, 540)

func save_character():
	if current_character.character_id.is_empty():
		push_error("Character ID is required"); return
	var save_path = DATA_DIR + "%s.json" % current_character.character_id
	if current_character.save_to_file(save_path):
		print("ä¿å­˜å®Œäº†: ", save_path)
		EditorInterface.get_resource_filesystem().scan()
		_refresh_character_list()

func load_character(char_id: String):
	var load_path = DATA_DIR + "%s.json" % char_id
	var loaded = CharacterData.load_from_file(load_path)
	if loaded:
		current_character = loaded
		current_portrait_name = ""
		_refresh_ui()
		if portraits_list.item_count > 0:
			portraits_list.select(0)
			_on_portrait_selected(0)
	else:
		push_error("ãƒ­ãƒ¼ãƒ‰å¤±æ•—: " + load_path)

func _refresh_ui():
	_is_updating_ui = true
	character_id_input.text = current_character.character_id
	display_name_input.text = current_character.display_name
	scale_spin.value = current_character.portrait_scale
	mirror_check.button_pressed = current_character.mirror
	description_input.text = current_character.description
	_refresh_portraits_list()
	_is_updating_ui = false

func _open_file_dialog(filters: String, callback: Callable):
	if file_dialog.file_selected.is_connected(_on_file_selected_callback):
		file_dialog.file_selected.disconnect(_on_file_selected_callback)
	file_dialog.filters = filters.split(",")
	file_dialog.file_mode = FileDialog.FILE_MODE_OPEN_FILE
	var wrapper = func(path): callback.call(path)
	file_dialog.file_selected.connect(wrapper, CONNECT_ONE_SHOT)
	file_dialog.popup_centered()

func _on_file_selected_callback(_path): pass